<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:background="@color/colorPrimaryDark">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_app"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dangnhap"
            android:textStyle="bold"
            android:textSize="32sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditText_Email"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_email"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="15dp"
            android:inputType="textEmailAddress"
            android:textCursorDrawable="@drawable/cursor"
            android:backgroundTint="@android:color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EditText_Password"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/hint_password"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:drawableLeft="@drawable/ic_password"
            android:drawablePadding="15dp"
            android:inputType="textPassword"
            android:textCursorDrawable="@drawable/cursor"
            android:backgroundTint="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Button_Login"
                    android:text="@string/dangnhap1"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:layout_margin="10dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/custom_button_border1"
                    android:textCursorDrawable="@null"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Button_QuenMK"
                    android:layout_weight="1"
                    android:text="Quên Mật Khẩu"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:layout_margin="10dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/custom_button_border1"
                    android:textCursorDrawable="@null"
                    android:gravity="center"
                    android:layout_gravity="center"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnFacebook"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/btnfb"
            />

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/btngg"
            />





</LinearLayout>